--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "an API for a website, mobile & desktop app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +18,10 @@
     "restaurants"
   ],
   "author": "Talace",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mariadb": "^3.2.1"
+  }
 }
