--- a/.github/docker/Dockerfile
+++ b/.github/docker/Dockerfile
@@ -1,23 +1,23 @@
-# Use the Node.js 18 image
-FROM node:18
+# Utilisez une image de base Node.js
+FROM node:14
 
-# Set the working directory
-WORKDIR /app
+# Créez et définissez le répertoire de travail dans le conteneur
+WORKDIR /API
 
-# Clone the project from GitHub with a specific tag
-RUN git clone --branch v3.0 --single-branch https://github.com/FAST-SUSHI-NEXTECH/API.git .
+# Clone the Git repository (replace <repository-url> with your actual repository URL)
+RUN git clone --branch v2.1 --single-branch https://github.com/FAST-SUSHI-NEXTECH/API.git .
 
-# Remove the existing dbConnection.js file
-RUN rm -f /app/src/dbConnection.js
+# Delete the /src/dbConnection.js file
+RUN rm -f src/dbConnection.js
 
-# Copy the local dbConnection.js file to the Docker image
-COPY ./dbConnection.js /app/src/
+# Copy the local dbConnection.js file to the same location
+COPY dbConnection.js src/dbConnection.js
 
-# Install dependencies
+# Installez les dépendances du projet
 RUN npm install
 
-# Expose the port your application will run on
+# Exposez le port sur lequel votre application Express s'exécute
 EXPOSE 3000
 
-# Start the application
-CMD ["npm", "start"]
+# Command to start your application
+CMD [ "npm", "start" ]
