--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "glob": "^10.3.10",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.2.1",
     "multer": "^1.4.5-lts.1",
+    "rimraf": "^5.0.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
