--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mariadb": "^3.2.1",
     "multer": "^1.4.5-lts.1",
     "rimraf": "^5.0.5",
+    "sharp": "^0.33.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
